--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Lexi Bakes for Charity</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Helvetica Neue', sans-serif;
+      background: #fff8f2;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    header {
+      padding: 2rem;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      color: #d46a6a;
+      margin: 0.5rem 0;
+    }
+
+    p.tagline {
+      font-size: 1.2rem;
+      color: #555;
+      margin-top: 0;
+    }
+
+    section.menu {
+      background: #fff;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      max-width: 500px;
+      width: 90%;
+    }
+
+    h2 {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+      color: #a24f4f;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    li {
+      font-size: 1.1rem;
+      padding: 0.5rem 0;
+      border-bottom: 1px solid #eee;
+    }
+
+    footer {
+      margin-top: 2rem;
+      font-size: 0.9rem;
+      color: #888;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Lexi Bakes for Charity</h1>
+    <p class="tagline">Fresh bakes. Sweet hearts. 100% for a good cause.</p>
+  </header>
+
+  <section class="menu">
+    <h2>Today's Menu</h2>
+    <ul>
+      <li>🍓 Strawberry Shortcake Cupcakes</li>
+      <li>🍫 Triple Chocolate Brownies</li>
+      <li>🍪 Soft-Baked Choco Chip Cookies</li>
+      <li>🍋 Lemon Poppyseed Muffins</li>
+      <li>🥐 Mini Almond Croissants</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>All proceeds go to local food banks ❤️</p>
+  </footer>
+</body>
+</html>
 
