Update index.html add table

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 <body>
   <header>
     <h1>Lexi Bakes for Charity</h1>
-    <p class="tagline">Fresh bakes. Sweet hearts. 100% for a good cause.</p>
+    <p class="tagline">Fresh bakes. Jawbone Walk at the Meadows. 100% for a good cause.</p>
   </header>
 
   <section class="menu">
-    <h2>Today's Menu</h2>
+    <h2>Menu for 19 April:</h2>
     <ul>
       <li>🍓 Strawberry Shortcake Cupcakes</li>
       <li>🍫 Triple Chocolate Brownies</li>
@@ -82,6 +82,57 @@
       <li>🥐 Mini Almond Croissants</li>
     </ul>
   </section>
+
+  <section class="schedule">
+  <h2>This Week's Schedule</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Day</th>
+        <th>Location</th>
+        <th>Hours</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Monday</td>
+        <td>Main Street Market</td>
+        <td>9 AM – 2 PM</td>
+      </tr>
+      <tr>
+        <td>Tuesday</td>
+        <td>Closed</td>
+        <td>-</td>
+      </tr>
+      <tr>
+        <td>Wednesday</td>
+        <td>Lexi's Corner Stand</td>
+        <td>10 AM – 4 PM</td>
+      </tr>
+      <tr>
+        <td>Thursday</td>
+        <td>Farmer's Market</td>
+        <td>11 AM – 3 PM</td>
+      </tr>
+      <tr>
+        <td>Friday</td>
+        <td>City Park Pop-Up</td>
+        <td>12 PM – 5 PM</td>
+      </tr>
+      <tr>
+        <td>Saturday</td>
+        <td>Downtown Plaza</td>
+        <td>8 AM – 1 PM</td>
+      </tr>
+      <tr>
+        <td>Sunday</td>
+        <td>Closed</td>
+        <td>-</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
+
 
   <footer>
     <p>All proceeds go to local food banks ❤️</p>
