--- a/index.html
+++ b/index.html
@@ -64,6 +64,33 @@
       font-size: 0.9rem;
       color: #888;
     }
+
+    section.schedule {
+  background: #fff;
+  padding: 2rem;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+  max-width: 500px;
+  width: 90%;
+  margin-top: 2rem;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 1rem;
+}
+
+th, td {
+  text-align: left;
+  padding: 0.75rem 0.5rem;
+  border-bottom: 1px solid #eee;
+}
+
+th {
+  color: #a24f4f;
+}
+
   </style>
 </head>
 <body>
