--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@ th {
   <header>
     <h1>Lexi Bakes for Charity</h1>
     <p class="tagline">Fresh bakes. Jawbone Walk at the Meadows. 100% for a good cause.</p>
+    <p>Currently running for MacMillan Cancer Support for Women's 10K Glasgow</p>
+    <p>Progress as of 18 April: £0 / £150</p>
   </header>
 
   <section class="menu">
-    <h2>Menu for 19 April:</h2>
+    <h2>Menu for Friday, 19 April:</h2>
     <ul>
-      <li>🍓 Strawberry Shortcake Cupcakes</li>
-      <li>🍫 Triple Chocolate Brownies</li>
-      <li>🍪 Soft-Baked Choco Chip Cookies</li>
-      <li>🍋 Lemon Poppyseed Muffins</li>
-      <li>🥐 Mini Almond Croissants</li>
+      <li>🍪 Neapolitan Cookies (£3)</li>
+      <li>🫐 Blueberry Scones (£3) </li>
+      <li>🍞 Cinammon Buns (£4) </li>
     </ul>
   </section>
 
@@ -123,7 +123,7 @@ th {
     <tbody>
       <tr>
         <td>Monday</td>
-        <td>Main Street Market</td>
+        <td>Jawbone Walk</td>
         <td>9 AM – 2 PM</td>
       </tr>
       <tr>
@@ -133,23 +133,23 @@ th {
       </tr>
       <tr>
         <td>Wednesday</td>
-        <td>Lexi's Corner Stand</td>
-        <td>10 AM – 4 PM</td>
+        <td>Closed</td>
+        <td>-</td>
       </tr>
       <tr>
         <td>Thursday</td>
-        <td>Farmer's Market</td>
-        <td>11 AM – 3 PM</td>
+        <td>Closed</td>
+        <td>-</td>
       </tr>
       <tr>
         <td>Friday</td>
-        <td>City Park Pop-Up</td>
-        <td>12 PM – 5 PM</td>
+        <td>Closed</td>
+        <td>-</td>
       </tr>
       <tr>
         <td>Saturday</td>
-        <td>Downtown Plaza</td>
-        <td>8 AM – 1 PM</td>
+        <td>Closed</td>
+        <td>-</td>
       </tr>
       <tr>
         <td>Sunday</td>
@@ -162,7 +162,7 @@ th {
 
 
   <footer>
-    <p>All proceeds go to local food banks ❤️</p>
+    <p>All proceeds go to charity ❤️</p>
   </footer>
 </body>
 </html>
