--- a/index.html
+++ b/index.html
@@ -97,9 +97,16 @@ th {
   <header>
     <h1>Lexi Bakes for Charity</h1>
     <p class="tagline">Fresh bakes. Jawbone Walk at the Meadows. 100% for a good cause.</p>
-    <p>Currently running for MacMillan Cancer Support for Women's 10K Glasgow</p>
-    <p>Progress as of 18 April: £0 / £150</p>
   </header>
+
+  <section class="fundraiser">
+  <h2>Currently running for MacMillan Cancer Support for Women's 10K Glasgow</h2>
+  <div class="progress-container">
+    <div class="progress-bar" style="width: 65%;"></div>
+  </div>
+  <p class="progress-text">£0 raised of £150 goal</p>
+</section>
+
 
   <section class="menu">
     <h2>Menu for Friday, 19 April:</h2>
