--- a/index.html
+++ b/index.html
@@ -91,6 +91,39 @@ th {
   color: #a24f4f;
 }
 
+  section.fundraiser {
+  background: #fff;
+  padding: 2rem;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+  max-width: 500px;
+  width: 90%;
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.progress-container {
+  background: #ffeaea;
+  border-radius: 20px;
+  height: 20px;
+  width: 100%;
+  margin: 1rem 0;
+  overflow: hidden;
+}
+
+.progress-bar {
+  background: #d46a6a;
+  height: 100%;
+  border-radius: 20px 0 0 20px;
+  transition: width 0.6s ease;
+}
+
+.progress-text {
+  font-size: 1rem;
+  color: #555;
+}
+
+
   </style>
 </head>
 <body>
