--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.05);
       max-width: 500px;
       width: 90%;
+      margin-top: 2rem;
     }
 
     h2 {
@@ -133,7 +134,7 @@ th {
   </header>
 
   <section class="fundraiser">
-  <h2>Currently running for MacMillan Cancer Support for Women's 10K Glasgow</h2>
+  <h5>Currently running for MacMillan Cancer Support for Women's 10K Glasgow</h5>
   <div class="progress-container">
     <div class="progress-bar" style="width: 65%;"></div>
   </div>
